Added endpoint for available employees + login + create user + add service type to salon