@@ -4,12 +4,19 @@ import io.roxanam.backend.dtos.AppointmentDto;
 import io.roxanam.backend.dtos.TimeSlotsDto;
 import io.roxanam.backend.entities.Appointment;
 import io.roxanam.backend.entities.AppointmentStatus;
+import io.roxanam.backend.entities.UserType;
 import io.roxanam.backend.mappers.AppointmentMapper;
 import io.roxanam.backend.services.AppointmentService;
+import io.roxanam.backend.services.UserService;
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalTime;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -18,6 +25,7 @@ import java.util.stream.Collectors;
 @RequestMapping("/appointments")
 public class AppointmentController {
     private AppointmentService appointmentService;
+    private UserService userService;
 
     @PostMapping
     public AppointmentDto save(@RequestBody AppointmentDto appointmentDto) {
@@ -26,8 +34,19 @@ public class AppointmentController {
 
     @GetMapping
     public List<AppointmentDto> findAll() {
-        List<Appointment> appointments = appointmentService.findAll();
-        return appointments.stream().map(a -> AppointmentMapper.toDto(a)).collect(Collectors.toList());
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        Collection<String> authorities = authentication.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
+
+        List<Appointment> appointments = new ArrayList<>();
+        if (authorities.contains("ROLE_" + UserType.CUSTOMER)) {
+            appointments = appointmentService.findAllByCustomerEmail(authentication.getName());
+        } else if (authorities.contains("ROLE_" + UserType.EMPLOYEE)) {
+            appointments = appointmentService.findAllByEmployeeEmail(authentication.getName());
+        } else if (authorities.contains("ROLE_" + UserType.MANAGER)) {
+            appointments = appointmentService.findAllByManagerEmail(authentication.getName());
+        }
+
+        return appointments.stream().map(AppointmentMapper::toDto).collect(Collectors.toList());
     }
 
     @GetMapping("/{id}")
@@ -38,7 +57,7 @@ public class AppointmentController {
 
     @GetMapping("/by-employee/{id}")
     public List<AppointmentDto> findAllByEmployee(@PathVariable("id") Long employeeId) {
-        List<Appointment> appointments = appointmentService.findAllByEmployee(employeeId);
+        List<Appointment> appointments = appointmentService.findAllByEmployeeId(employeeId);
         return appointments.stream()
                 .map(a -> AppointmentMapper.toDto(a))
                 .collect(Collectors.toList());
@@ -46,7 +65,7 @@ public class AppointmentController {
 
     @GetMapping("/by-customer/{id}")
     public List<AppointmentDto> findAllByCustomer(@PathVariable("id") Long customerId) {
-        List<Appointment> appointments = appointmentService.findAllByCustomer(customerId);
+        List<Appointment> appointments = appointmentService.findAllByCustomerId(customerId);
         return appointments.stream()
                 .map(a -> AppointmentMapper.toDto(a))
                 .collect(Collectors.toList());
@@ -61,7 +80,7 @@ public class AppointmentController {
     }
 
     @PostMapping("/{id}/{status}")
-    public AppointmentDto accept(@PathVariable("id") Long id, @PathVariable("status")AppointmentStatus appointmentStatus) {
+    public AppointmentDto status(@PathVariable("id") Long id, @PathVariable("status") AppointmentStatus appointmentStatus) {
         return AppointmentMapper.toDto(appointmentService.changeStatus(id, appointmentStatus));
     }
 
